@@ -1,3 +1,7 @@
+drkns 08.02.2017 19:44:46 +0000 - build 4891
+
+1. С форума - файлы, запущенные через системные ассоциации пишутся в историю без кавычек, даже если имеют пробелы в именах, из-за чего повторный запуск через Ctrl+E невозможен.
+
 zg 07.02.2017 12:15:01 +0200 - build 4890
 
 1. уточнение 4889.
